# scenario-engine

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  plan.md  vcpkg.json
data/: sample.csv
docs/: cpp_features.md  reading_guide.md  roadmap.md  scenario_generation.md
include/config/: Config.hpp  ConfigLoader.hpp
include/data/: CsvLoader.hpp  Observation.hpp  SummaryStatistics.hpp  TimeSeries.hpp  TimeSeriesView.hpp
include/evaluation/: Backtester.hpp  Benchmark.hpp  CsvExporter.hpp  Metrics.hpp  ModelEvaluationResult.hpp  MultiHorizonResult.hpp  Residual.hpp  ResidualAnalyzer.hpp  ResidualGenerator.hpp  ResidualSeries.hpp  ResidualStatistics.hpp
include/forecasting/: BacktestResult.hpp  Backtester.hpp  ExponentialSmoothingForecaster.hpp  ForecastResult.hpp  Forecaster.hpp  Metrics.hpp  MovingAverageForecaster.hpp  StochasticMovingAverageForecaster.hpp
include/simulation/: ScenarioGenerator.hpp
include/statistics/: SummaryStatistics.hpp
src/: main.cpp
src/config/: ConfigLoader.cpp
src/data/: CsvLoader.cpp  TimeSeries.cpp
src/evaluation/: Backtester.cpp  Benchmark.cpp  CsvExporter.cpp  Metrics.cpp  ResidualAnalyzer.cpp  ResidualGenerator.cpp
src/forecasting/: Backtester.cpp  ExponentialSmoothingForecaster.cpp  Metrics.cpp  MovingAverageForecaster.cpp  StochasticMovingAverageForecaster.cpp
src/simulation/: ScenarioGenerator.cpp
tests/: BacktesterTests.cpp  BenchmarkTests.cpp  CsvExporterTests.cpp  ExponentialSmoothingForecasterTests.cpp  MovingAverageForecasterTests.cpp  MultiHorizonBenchmarkTests.cpp  ResidualAnalyzerTests.cpp  ResidualGeneratorTests.cpp  ResidualSeriesTests.cpp  ScenarioGeneratorTests.cpp  StochasticMovingAverageForecasterTests.cpp  TimeSeriesTests.cpp
